tests/snapshots/assets__check_file@unit-windows.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/windows.typ
---
#align(
  center,
  table(
    columns: 2,
    column-gutter: 1em,
    [$ f_n = cases(
      a &"if" n = 0,
      r dot f_(n - 1) &"else"
    ) $],
  ),
)
